--- a/import.css
+++ b/import.css
@@ -2,6 +2,8 @@
 @import url('https://gibbu.github.io/BetterDiscord-Themes/AdjustableServerWidth/base.css');
 @import url('https://gibbu.github.io/BetterDiscord-Themes/RadialStatus/base.css');
 
+/* hi */
+
 :root {
   --accent: 63,81,181;
   --message-padding: 10px;
