--- a/import.css
+++ b/import.css
@@ -3,6 +3,7 @@
 @import url('https://gibbu.github.io/BetterDiscord-Themes/RadialStatus/base.css');
 
 /* hi */
+/* dont touch any of this */
 
 :root {
   --accent: 63,81,181;
