--- a/import.css
+++ b/import.css
@@ -1021,3 +1021,4 @@ html, span:not([class*=spinner-]):not([class*=spinnerItem]) {
 .contentRegion-3nDuYy .tools-3-3s-N .keybind-KpFkfr {
     display: none;
 }
+.contentRegionScroller-26nc1e { background: #171a1f }
