--- a/import.css
+++ b/import.css
@@ -1024,3 +1024,6 @@ html, span:not([class*=spinner-]):not([class*=spinnerItem]) {
 .contentRegionScroller-26nc1e { 
     background: #171a1f;
 }
+.sidebarRegionScroller-3MXcop {
+    backgroud: #0x22262E;
+}
