--- a/import.css
+++ b/import.css
@@ -1025,5 +1025,5 @@ html, span:not([class*=spinner-]):not([class*=spinnerItem]) {
     background: #171a1f;
 }
 .sidebarRegion-VTFUkN {
-    backgroud: #0x22262E;
+    background: #22262E;
 }
