--- a/import.css
+++ b/import.css
@@ -1027,3 +1027,6 @@ html, span:not([class*=spinner-]):not([class*=spinnerItem]) {
 .sidebarRegion-VTFUkN {
     background: #22262E;
 }
+.theme-dark .progress-1IcQ3A {
+  background: #171a1f;
+}
