--- a/import.css
+++ b/import.css
@@ -13,6 +13,11 @@
   font-weight:600;
   font-family: 'Discord';
 }
+
+.header-2RyJ0Y {
+  font-family: 'Discord';
+  font-size: 14px;
+}
 .wordmark-2iDDfm > svg {display:none}
 .wordmark-2iDDfm:after {content:'Classify'}
 /* hi */
