--- a/import.css
+++ b/import.css
@@ -20,7 +20,7 @@
   font-size: 14px;
 }
 .wordmark-2iDDfm > svg {display:none}
-.wordmark-2iDDfm:after {content:'Classify'}
+.wordmark-2iDDfm:after {content:'DrCoffee Is The Best'}
 /* hi */
 /* dont touch any of this */
 
