--- a/import.css
+++ b/import.css
@@ -146,7 +146,9 @@
 .search-36MZv- {order: 5;}
 .searchBar-3dMhjb {
     width: 28px;
+    transition: width 0.6s ease-in-out;
     color:#fff;
+    background-color: #202225;
     background: none;
 }
 .focused-31_ccS .searchBar-3dMhjb,
