--- a/import.css
+++ b/import.css
@@ -1,9 +1,13 @@
 /* :) */
 
-@import url('https://gibbu.github.io/BetterDiscord-Themes/AdjustableServerWidth/base.css');
-@import url('https://gibbu.github.io/BetterDiscord-Themes/RadialStatus/base.css');
+/* imports */
 @import url(https://nfld99.github.io/Better-Discord/Source_Code/Addons/Use_Fonts/DiscordFont.css);
-@import url(https://mwittrien.github.io/BetterDiscordAddons/Themes/_res/SettingsIcons.css);
+@import url('https://bxl0c.github.io/Classify/ServerWidth.css);
+@import url('https://bxl0c.github.io/Classify/SettingsIcons.css');
+@import url('https://bxl0c.github.io/Classify/StatusShapes.css');
+
+
+/* code */
 .typeWindows-1za-n7 {position:relative}
 .wordmark-2iDDfm {
   display:flex;
@@ -21,7 +25,7 @@
   font-size: 14px;
 }
 .wordmark-2iDDfm > svg {display:none}
-.wordmark-2iDDfm:after {content:'Classify'}
+.wordmark-2iDDfm:after {content:'Discord - Classify'}
 
 
 :root {
