--- a/import.css
+++ b/import.css
@@ -2,7 +2,7 @@
 
 /* imports */
 @import url(https://nfld99.github.io/Better-Discord/Source_Code/Addons/Use_Fonts/DiscordFont.css);
-@import url('https://bxl0c.github.io/Classify/ServerWidth.css);
+@import url('https://bxl0c.github.io/Classify/ServerWidth.css');
 @import url('https://bxl0c.github.io/Classify/SettingsIcons.css');
 @import url('https://bxl0c.github.io/Classify/StatusShapes.css');
 
