--- a/import.css
+++ b/import.css
@@ -78,5 +78,18 @@ layer-3QrUeG[aria-label="RTC_DEBUG"],
 .description-2L932D, .da-description{
     display:none;
 }
+.item-PXvHYJ{
+    color: gray !important;
+}
 
+
+
+
+
+
+/* MainUI */
+
+#app-mount .bg-h5jY_x{
+    color: gray
+}
 
